--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.4",
     "@craco/craco": "^6.4.3",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,11 +17,15 @@
     "@types/react": "^16.14.23",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.23",
+    "@types/react-responsive": "^8.0.5",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.6",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "styled-components": "^5.3.3",
     "twin.macro": "^2.8.2",
     "typescript": "~4.1.5"
